# quine

./: .gitignore  CMakeLists.txt  README.md
include/: BooleanFunction.h  QuineMcCluskey.h
src/: BooleanFunction.cpp  QuineMcCluskey.cpp  main.cpp
